# campusstudy-ai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260423_0001_init.py
apps/api/app/: deployment.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: admin.py  auth.py  chat.py  courses.py  dashboard.py  enrollments.py  flashcards.py  health.py  materials.py  notes.py  processing.py  (+4 more)
apps/api/app/core/: config.py  deps.py  logging.py  rate_limit.py  security.py
apps/api/app/db/: session.py  types.py
apps/api/app/models/: __init__.py  entities.py  enums.py
apps/api/app/providers/: base.py  factory.py  groq.py  meta_llama.py  mock.py  storage.py
apps/api/app/schemas/: admin.py  auth.py  common.py  course.py  material.py  study.py
apps/api/app/seed/: run.py
apps/api/app/services/: admin.py  antivirus.py  auth.py  chat.py  chunking.py  citations.py  dashboard.py  extraction.py  generation.py  materials.py  processing.py  prompt_safety.py  retrieval.py  study.py
apps/api/app/tests/: conftest.py  test_api_authz.py  test_api_contracts.py  test_chat.py  test_chunking.py  test_citations.py  test_config.py  test_cors.py  test_deployment.py  test_extraction.py  test_flashcards.py  test_generation.py  test_processing.py  test_provider_factory.py  test_quizzes.py  test_retrieval.py  test_study_generation_auth.py  test_worker_config.py
apps/api/app/workers/: celery_app.py  tasks.py
(+78 files in other folders)
